# MACS1_LC

./: .gitignore  README.md  Seance_1.tgz  Seance_10.tgz  Seance_2.tgz  Seance_3.tgz  Seance_4.tgz  Seance_5.tgz  Seance_6.tgz  Seance_6_7.tgz  Seance_7.tgz  Seance_8.tgz  Seance_9.tgz
Seance_1/: LC_1.odp
Seance_1/exemples/exemple1/: .gitignore  ex1.c  exemple1.c  run.sh  source1.c  source2.c  source3.c
Seance_1/exemples/exemple2/: A.c  B.c  C.c  exemple2a.c  exemple2b.c  input  run.sh  run1.sh  run2.sh
Seance_1/exemples/exemple3/: .gitignore  ex3a.c  ex3b.c  exemple3.c  run.sh  run1.sh
Seance_1/exemples/exemple4/: A.c  main.c
Seance_10/Exemples/6_python/: run1.py  run2.py
Seance_10/Exemples/6_python/src/: CMakeLists.txt  calculmodule.c
Seance_10/code/src/: CMakeLists.txt  data.h  f.c  g.c  main.c
Seance_10/test/: ops
Seance_2/exemples/Exemple1/: run.sh  variable_fichier.c  variable_globale.c  variable_locale.c
Seance_2/exemples/Exemple3/: macro.c  run.sh
Seance_2/exemples/Exemple4/: const.c  constexpr.c  run.sh  run2.sh
Seance_2/exemples/Exemple7/: main.c  matrice_creuse.c  matrice_creuse.h  run.sh
Seance_3/: adresses.c  code.c  comparaison_pointeurs.c  somme.c
Seance_3/endian/: test1.c  test1.ps1  test2.c
Seance_4/: char1.c  char2.c  entier2.c  entier3.c  entier4.c  octet1.c  octet2.c  octet3.c  octet4.c  reels1.c  reels2.c
Seance_4/unions/: union.c  union2.c
Seance_5/: alignement.c  padding.c  structure2.c  variable_statique.c  vecteur.c
Seance_5/argc_argv/: main.c
Seance_6/Exemple1_Make/: B.c  B.h  Makefile  Makefile_v2  Makefile_v3  Makefile_v4  Makefile_v5  Makefile_v6
Seance_6/Exemple2_Make/: Makefile  main.c
Seance_6/Exemple3_autotools/: .gitignore  A.h  Makefile.am  configure.ac
Seance_7/Exemples/: alignement.c  structure1.c  variable_statique.c
Seance_7/unions/: union.c  union2.c
Seance_9/Exemples/MatrixMult/src/: CMakeLists.txt
Seance_9/Exemples/MatrixMult/src/0_naive/: CMakeLists.txt  main.c
Seance_9/Exemples/MatrixMult/src/1_loop_change/: CMakeLists.txt  matmul_1_loop_change.c
Seance_9/Exemples/MatrixMult/src/2_loop_change_unrolling/: CMakeLists.txt  matmul_2_loop_change_unrolling.c
Seance_9/Exemples/MatrixMult/src/3_tile/: CMakeLists.txt
Seance_9/Exemples/MatrixMult/src/4_tile_unrolling/: CMakeLists.txt  main.c  matmul_4_tile_unrolling.c
Seance_9/Exemples/MatrixMult/src/5_tile_avx/: CMakeLists.txt  matmul_5_tile_avx.c
Seance_9/Exemples/MatrixMult/src/6_naive_openmp/: CMakeLists.txt  matmul_6_naive_openmp.c
Seance_9/Exemples/MatrixMult/src/7_naive_openmp_avx/: CMakeLists.txt  main.c
Seance_9/Exemples/MatrixMult/src/8_tile_openmp_avx/: matmul_8_tile_openmp_avx.c
Seance_9/Exemples/MatrixMult/src/9_naive_pthreads/: CMakeLists.txt  matmul_9_naive_pthreads.c
Seance_9/Exemples/MatrixMult/src/common/: CMakeLists.txt  matmul.h  matrix.c  timer.c  timer.h
Seance_9/librairies/exemple1/src/: CMakeLists.txt  main.c
Seance_9/librairies/exemple1/src/alglin/: alglin.h  matrice.c  prodmat.c
(+265 files in other folders)
